# MoE

./: .RData  .Rhistory  .gitignore  BinomialFamily.cpp  BinomialFamily.h  CMakeLists.txt  Data.cpp  Data.h  Expert.cpp  Expert.h  ExpertModel.cpp  ExpertModel.h  Family.cpp  Family.h  GLMExpert.cpp  GLMExpert.h  GLMModel.cpp  GLMModel.h  GammaFamily.cpp  GammaFamily.h  Gate.cpp  Gate.h  GateParameters.h  Node.cpp  Node.h  NormalExpert.cpp  NormalExpert.h  NormalFamily.cpp  NormalFamily.h  NormalModel.cpp  NormalModel.h  NormalParameters.h  P.csv  PathProbE_1.csv  PathProbE_2.csv  PathProbE_3.csv  PoissonFamily.cpp  PoissonFamily.h  RJ_analyse.R  RealEstateMRT.csv  (+128 more)
